--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<p>Vilnius Coding School</p>
-<p>Labas</p>
+    <header>
+        <div class="top-header">
+            <div class="container flex-container">
+                <div class="contact-header">           
+                        <ul class="flex-container">
+                            <li><a href="mailto:info@yourdomain.com"><i class="bi bi-envelope"></i> info@yourdomain.com</a></li>
+                            <li><a href="tel:+370454545"><i class="bi bi-telephone"></i> +370454545</a></li>
+                        </ul>
+                </div>
+                <div class="social-header">
+                    <ul class="flex-container">
+                        <li><a href="#" target="_blank"></a><i class="bi bi-twitter"></i> </li>
+                        <li><a href="#" target="_blank"></a><i class="bi bi-facebook"></i> </li>
+                        <li><a href="#" target="_blank"></a><i class="bi bi-linkedin"></i> </li>
+                        <li><a href="#" target="_blank"></a><i class="bi bi-youtube"></i></li>
+                        <li><a href="#" target="_blank"></a><i class="bi bi-rss"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+     <div class="nav-header">
+            <div class="container flex-container">
+                <div class="logo">
+                    <img src="images/logo.png" alt="eProphet Media">
+                </div>
+                <nav>
+                    <ul class="flex-container">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">SEO for Law Firms</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <p><input type="text" placeholder="Enter your name"></p>
+    <button>Submit</button>
 </body>
+
 </html>
